EC-70 - displaying onlu username in topbar, ecol_transcations btn alignment fixed

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -339,6 +339,14 @@ $wide-screen: 1200px
       text-align: left
       margin-left: 0px
 
+  .ecol_transcations_btn
+    padding: 0.5% 0.5% 0.5% 0.5%
+    font-size: 1vmax
+    width: 12%
+    margin-top: 0.5%
+    margin-bottom: 0.5%
+
+
 .show_ticket
   margin-left: 10%
   margin-right: 10%
@@ -431,9 +439,3 @@ div.new_content
 .show_form
   margin-left: 10%
   margin-right: 10%
-
-.ecol_transcations_btn
-  padding: 0.5% 0.5% 0.5% 0.5%
-  font-size: 0.8em
-  margin-top: 0.5%
-  margin-bottom: 0.5%
